--- a/include/libft/Makefile
+++ b/include/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: arphueng <arphueng@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/08/29 14:39:06 by arphueng          #+#    #+#              #
-#    Updated: 2025/04/30 23:55:16 by arphueng         ###   ########.fr        #
+#    Updated: 2025/05/04 19:42:24 by arphueng         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,8 +16,7 @@ SRCS = \
 	ft_itoa.c ft_invalid_int.c ft_memchr.c ft_memcmp.c ft_memcpy.c ft_memmove.c ft_memset.c ft_strchr.c ft_strdup.c \
 	ft_striteri.c ft_strjoin.c ft_strlcat.c ft_strlcpy.c ft_strlen.c ft_strmapi.c ft_strncmp.c ft_strnstr.c \
 	ft_strrchr.c ft_strtrim.c ft_substr.c ft_split.c ft_tolower.c ft_toupper.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c \
-	ft_putnbr_fd.c ft_exit.c ft_atol.c ft_issign.c ft_isfloat.c
-SRCS_BONUS = \
+	ft_putnbr_fd.c ft_exit.c ft_atol.c ft_issign.c ft_isfloat.c ft_atof.c \
 	ft_lstadd_front_bonus.c ft_lstnew_bonus.c ft_lstadd_back_bonus.c ft_lstclear_bonus.c ft_lstdelone_bonus.c \
 	ft_lstiter_bonus.c ft_lstlast_bonus.c ft_lstmap_bonus.c ft_lstsize_bonus.c
 CC = cc
